Circular dependency fixed

--- a/public/sass/abstracts/_typography.scss
+++ b/public/sass/abstracts/_typography.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: common-text-font;
-    src: url('../../fonts/HTOWERT.TTF');
+    src: url("../../fonts/HTOWERT.TTF");
 }
 
 
