--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -219,7 +219,7 @@ html {
 .about__right-content {
   width: 100%;
   height: 100%;
-  background-image: url("../../img/white-ceramic-sculpture-with-black-face-mask-3952240.jpg");
+  background-image: url("./../../img/white-ceramic-sculpture-with-black-face-mask-3952240.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
