--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -21,7 +21,6 @@
 
 .title-medium {
   font-family: common-text-font;
-  font-size: 300%;
   font-weight: lighter;
 }
 
@@ -318,13 +317,11 @@ html {
 .product-grid {
   width: 100%;
   min-height: 100vh;
-  background-color: #B9B9B9;
 }
 
 .product-grid-container {
   width: 90%;
   height: 100%;
-  background-color: #a6a6cf;
   margin: auto;
   display: -ms-grid;
   display: grid;
@@ -342,7 +339,7 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 70vh;
+  height: 90vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -353,12 +350,14 @@ html {
       -ms-flex-pack: end;
           justify-content: flex-end;
   text-align: center;
+  -webkit-box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.59);
+  box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.59);
 }
 
 .product-info {
   position: relative;
   width: 100%;
-  height: 23%;
+  height: 18%;
   vertical-align: middle;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -382,11 +381,9 @@ html {
   content: "";
   width: 100%;
   height: 100%;
-  background-color: transparent;
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
-  -webkit-filter: brightness(130%);
-          filter: brightness(130%);
+  background-color: rgba(255, 255, 255, 0.51);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
   z-index: -1;
 }
 
@@ -394,6 +391,27 @@ html {
   position: relative;
   top: 3%;
   z-index: 10;
+  width: 6vw;
+  height: 8%;
+  font-size: 1.8vw;
+  line-height: -20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.product-name {
+  font-size: 2.1vw;
+}
+
+.product-artist {
+  font-size: 1.8vw;
 }
 
 .btn, .btn-medium, .btn-large, .grid-buy-btn {
@@ -420,9 +438,5 @@ html {
 .grid-buy-btn {
   background-color: #131313;
   color: #FFFFFF;
-  width: 30%;
-  height: 10%;
-  font-size: 3rem;
-  padding-top: 0.2rem;
 }
 /*# sourceMappingURL=style.css.map */
