--- a/public/sass/layout/_product-grid.scss
+++ b/public/sass/layout/_product-grid.scss
@@ -17,6 +17,7 @@
   display: flex;
   flex-direction: column;
   height: 90vh;
+  width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -26,12 +27,12 @@
   -webkit-box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.59);
   -moz-box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.59);
   box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.59);
+  transition: all .05s ease-in;
+  cursor: pointer;
   &-info {
     position: relative;
     width: 100%;
     height: 18%;
-    //   background-color: transparent;
-    //
     vertical-align: middle;
     display: flex;
     flex-direction: column;
@@ -47,8 +48,7 @@
       content: "";
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 255, 255, 0.51);
-      backdrop-filter: blur(3px);
+      background-color: rgba(255, 255, 255, 0.705);
       z-index: -1;
     }
   }
@@ -72,5 +72,11 @@
 
   &-artist {
     font-size: 1.8vw;
+  }
+
+  &:hover{
+    transform: scale(1.02);
+    
+    
   }
 }
