--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -1,5 +1,6 @@
 $color-bg-grey: #EFEFEF;
 $color-grey-light:#B9B9B9;
+$color-grey-ultra-light:#cecece;
 $color-grey-dark: #4E4E4E;
 $color-white-main: #FFFFFF;
 $color-black-lighter: #131313;
