--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -5,5 +5,6 @@
 @import './layout/home';
 @import './layout/about';
 @import './layout/artists';
+@import './layout/footer';
 @import './layout/product-grid';
 @import './components/buttons'; 
