--- a/public/sass/abstracts/_typography.scss
+++ b/public/sass/abstracts/_typography.scss
@@ -16,6 +16,11 @@
   letter-spacing: 0.8rem;
 }
 
+.main-title-small{
+  @extend .main-title;
+  font-size: 4vh;
+}
+
 .main-title-medium{
   @extend .main-title;
   font-size: 6vh;
@@ -42,3 +47,4 @@
 .color-white{
   color: $color-white-main;
 }
+
