--- a/public/sass/layout/_artists.scss
+++ b/public/sass/layout/_artists.scss
@@ -1,14 +1,16 @@
 .artists {
   position: relative;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: $color-grey-ultra-light;
 }
 
 .artists-content {
 //   background-color: blueviolet;
   width: 95%;
-  height: 125vh;
+  height: 135vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
@@ -24,14 +26,13 @@
   &__portrait {
     width: 100%;
     height: 80%;
-    // background-color: red;
     &-img {
       position: relative;
       height: 100%;
-
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+      filter: saturate(0);
       z-index: 1;
     }
     &-name{
@@ -51,10 +52,10 @@
       width: 100%;
       margin-top: 10%;
     //   background-color: rgb(226, 55, 43);
-    
+    & a{
+      position: relative;
+      top: 5vh;
+    }
   }
 }
 
-#artist-btn{
-    top: 5rem;
-}
