--- a/public/sass/style.css
+++ b/public/sass/style.css
@@ -1,35 +1,47 @@
 @font-face {
   font-family: common-text-font;
-  src: url("../../fonts/HTOWERT.TTF"); }
+  src: url("../../fonts/HTOWERT.TTF");
+}
 
 @font-face {
   font-family: title-font;
-  src: url("../../fonts/PERTILI.TTF"); }
+  src: url("../../fonts/PERTILI.TTF");
+}
 
-.main-title, .main-title-medium {
+.main-title, .main-title-small, .main-title-medium {
   font-family: title-font;
   font-size: 8vh;
   font-weight: lighter;
-  letter-spacing: 0.8rem; }
+  letter-spacing: 0.8rem;
+}
+
+.main-title-small {
+  font-size: 4vh;
+}
 
 .main-title-medium {
-  font-size: 6vh; }
+  font-size: 6vh;
+}
 
 .title-medium {
   font-family: common-text-font;
-  font-weight: lighter; }
+  font-weight: lighter;
+}
 
 .subtitle {
   font-style: italic;
   font-size: 1.7rem;
   color: #131313;
-  letter-spacing: 0.2rem; }
+  letter-spacing: 0.2rem;
+}
 
 .common-paragraph {
-  font-size: 1.7rem; }
+  font-size: 1.7rem;
+}
 
 .color-white {
-  color: #FFFFFF; }
+  color: #FFFFFF;
+}
 
 *,
 *::before,
@@ -37,15 +49,18 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: inherit;
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
   font-size: 62.5%;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 .app-container {
-  background-color: #EFEFEF; }
+  background-color: #EFEFEF;
+}
 
 .navbar {
   background-color: #4E4E4E;
@@ -54,234 +69,419 @@ html {
   height: 4rem;
   bottom: 0;
   right: 4rem;
-  transform: rotate(90deg);
-  transform-origin: 100% 100%;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+  -webkit-transform-origin: 100% 100%;
+          transform-origin: 100% 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  z-index: 10; }
-  .navbar__theme-icon {
-    position: relative;
-    height: 130%;
-    width: 5%;
-    background-color: #EFEFEF; }
-    .navbar__theme-icon img {
-      height: 40%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%); }
-  .navbar__list {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-    align-items: center; }
-    .navbar__list li {
-      font-size: 2rem;
-      color: #FFFFFF;
-      font-family: common-text-font; }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 10;
+}
+
+.navbar__theme-icon {
+  position: relative;
+  height: 130%;
+  width: 5%;
+  background-color: #EFEFEF;
+}
+
+.navbar__theme-icon img {
+  height: 40%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.navbar__list {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.navbar__list li {
+  font-size: 2rem;
+  color: #FFFFFF;
+  font-family: common-text-font;
+}
 
 .home {
   position: relative;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  height: 100vh; }
-  .home__left-content {
-    position: relative;
-    height: 150vh;
-    top: -50vh;
-    right: 3%; }
-    .home__left-content img {
-      height: 100%; }
-  .home__right-content {
-    display: flex;
-    flex-direction: column; }
-  .home__subtitle {
-    position: relative;
-    top: 10%;
-    right: 28%;
-    align-self: flex-end; }
-  .home__phrase {
-    position: relative;
-    top: 32%;
-    align-self: center; }
-  .home__arrow {
-    position: relative;
-    align-self: center;
-    top: 32%; }
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+  height: 100vh;
+}
+
+.home__left-content {
+  position: relative;
+  height: 150vh;
+  top: -50vh;
+  right: 3%;
+}
+
+.home__left-content img {
+  height: 100%;
+}
+
+.home__right-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.home__subtitle {
+  position: relative;
+  top: 10%;
+  right: 28%;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+.home__phrase {
+  position: relative;
+  top: 32%;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.home__arrow {
+  position: relative;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  top: 32%;
+}
 
 .header-title {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 120%;
   top: 10%;
-  right: 20%; }
-  .header-title :last-child {
-    margin-top: 8%;
-    margin-left: 20%; }
+  right: 20%;
+}
+
+.header-title :last-child {
+  margin-top: 8%;
+  margin-left: 20%;
+}
 
 .about {
   position: relative;
   height: 100vh;
   width: 100%;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr 1fr; }
-  .about__left-content {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding-top: 2rem; }
-  .about__right-content {
-    width: 100%;
-    height: 100%;
-    background-image: url("./../../img/white-ceramic-sculpture-with-black-face-mask-3952240.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: saturate(0); }
-  .about__title {
-    font-size: 6.5vh; }
-  .about__paragraph {
-    width: 75%;
-    margin-top: 15%; }
-  .about__action {
-    position: relative;
-    margin-top: 15%; }
-  .about__subtitle:first-of-type {
-    margin: 1%; }
-  .about__subtitle:last-of-type {
-    margin-top: 15%; }
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+.about__left-content {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding-top: 2rem;
+}
+
+.about__right-content {
+  width: 100%;
+  height: 100%;
+  background-image: url("./../../img/white-ceramic-sculpture-with-black-face-mask-3952240.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-filter: saturate(0);
+          filter: saturate(0);
+}
+
+.about__title {
+  font-size: 6.5vh;
+}
+
+.about__paragraph {
+  width: 75%;
+  margin-top: 15%;
+}
+
+.about__action {
+  position: relative;
+  margin-top: 15%;
+}
+
+.about__subtitle:first-of-type {
+  margin: 1%;
+}
+
+.about__subtitle:last-of-type {
+  margin-top: 15%;
+}
 
 .artists {
   position: relative;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #cecece;
+}
 
 .artists-content {
   width: 95%;
-  height: 125vh;
+  height: 135vh;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
   text-align: center;
   grid-column-gap: 4rem;
-  margin-right: 2%; }
+  margin-right: 2%;
+}
 
 .artist-card {
   position: relative;
   width: 100%;
-  height: 100%; }
-  .artist-card__portrait {
-    width: 100%;
-    height: 80%; }
-    .artist-card__portrait-img {
-      position: relative;
-      height: 100%;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      z-index: 1; }
-    .artist-card__portrait-name {
-      position: relative;
-      z-index: 5;
-      top: 10%; }
-    .artist-card__portrait:last-of-type {
-      color: #FFFFFF; }
-  .artist-card__text-work {
-    position: relative;
-    width: 100%;
-    margin-top: 10%; }
+  height: 100%;
+}
 
-#artist-btn {
-  top: 5rem; }
+.artist-card__portrait {
+  width: 100%;
+  height: 80%;
+}
+
+.artist-card__portrait-img {
+  position: relative;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -webkit-filter: saturate(0);
+          filter: saturate(0);
+  z-index: 1;
+}
+
+.artist-card__portrait-name {
+  position: relative;
+  z-index: 5;
+  top: 10%;
+}
+
+.artist-card__portrait:last-of-type {
+  color: #FFFFFF;
+}
+
+.artist-card__text-work {
+  position: relative;
+  width: 100%;
+  margin-top: 10%;
+}
+
+.artist-card__text-work a {
+  position: relative;
+  top: 5vh;
+}
+
+footer {
+  width: 100%;
+  height: 25vh;
+  text-align: center;
+  border-top: 2px solid #131313;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 15rem;
+}
+
+.footer-list {
+  height: 4vh;
+}
+
+.footer-list li {
+  font-size: 2rem;
+  color: #131313;
+}
 
 .product-grid {
   width: 100%;
-  min-height: 100vh; }
-  .product-grid-container {
-    width: 90%;
-    height: 100%;
-    margin: auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(25vw, 1fr));
-    grid-column-gap: 5rem;
-    grid-row-gap: 5rem; }
+  min-height: 100vh;
+}
+
+.product-grid-container {
+  width: 90%;
+  height: 100%;
+  margin: auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(25vw, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(25vw, 1fr));
+  grid-column-gap: 5rem;
+  grid-row-gap: 5rem;
+}
 
 .product {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   height: 90vh;
   width: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  align-items: center;
-  justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   text-align: center;
   -webkit-box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.59);
-  -moz-box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.59);
   box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.59);
+  -webkit-transition: all .05s ease-in;
   transition: all .05s ease-in;
-  cursor: pointer; }
-  .product-info {
-    position: relative;
-    width: 100%;
-    height: 18%;
-    vertical-align: middle;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    z-index: 5; }
-    .product-info * {
-      margin: 0.5rem 0; }
-    .product-info::before {
-      position: absolute;
-      content: "";
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 255, 255, 0.705);
-      z-index: -1; }
-  .product a {
-    position: relative;
-    top: 3%;
-    z-index: 10;
-    width: 6vw;
-    height: 8%;
-    font-size: 1.8vw;
-    line-height: -20%;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
-  .product-name {
-    font-size: 2.1vw; }
-  .product-artist {
-    font-size: 1.8vw; }
-  .product:hover {
-    transform: scale(1.02); }
+  cursor: pointer;
+}
+
+.product-info {
+  position: relative;
+  width: 100%;
+  height: 18%;
+  vertical-align: middle;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 5;
+}
+
+.product-info * {
+  margin: 0.5rem 0;
+}
+
+.product-info::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.705);
+  z-index: -1;
+}
+
+.product a {
+  position: relative;
+  top: 3%;
+  z-index: 10;
+  width: 6vw;
+  height: 8%;
+  font-size: 1.8vw;
+  line-height: -20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.product-name {
+  font-size: 2.1vw;
+}
+
+.product-artist {
+  font-size: 1.8vw;
+}
+
+.product:hover {
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
+}
 
 .btn, .btn-medium, .btn-large, .grid-buy-btn {
   color: #131313;
   text-decoration: none;
   border: 2px solid #000000;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
 .btn-medium {
   font-size: 1.5rem;
-  padding: 1.8rem 9rem; }
+  padding: 1.8rem 9rem;
+}
 
 .btn-large {
   font-size: 3rem;
-  padding: 1.8rem 9rem; }
+  padding: 1.8rem 9rem;
+}
 
 .btn-action {
-  font-style: italic; }
+  font-style: italic;
+}
 
 .grid-buy-btn {
   background-color: #131313;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+}
+/*# sourceMappingURL=style.css.map */
