--- a/public/sass/components/_nav.scss
+++ b/public/sass/components/_nav.scss
@@ -38,11 +38,14 @@
     justify-content: space-around;
     align-items: center;
     // background-color: red;
-    & li {
+    & li{
+      & a{
+        font-size: 2rem;
+        color: $color-white-main;
+        font-family: common-text-font;
+        text-decoration: none;
+      }
       
-      font-size: 2rem;
-      color: $color-white-main;
-      font-family: common-text-font;
     }
   }
 }
