--- a/public/sass/layout/_footer.scss
+++ b/public/sass/layout/_footer.scss
@@ -1,4 +1,5 @@
 footer{
+    position: relative;
     width: 100%;
     height: 25vh;
     // background-color: red;
@@ -8,7 +9,8 @@ footer{
     flex-direction: column;
     align-items: stretch;
     justify-content: space-around;
-    margin-top: 15rem;
+    // margin-top: 15rem;
+    top: 100%;
 }
 
 .footer-list{
