--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -8,3 +8,5 @@
 @import './layout/footer';
 @import './layout/product-grid';
 @import './components/buttons'; 
+@import './themes/light-theme';
+@import './themes/dark-theme';
