--- a/public/views/_home.pug
+++ b/public/views/_home.pug
@@ -1,8 +1,8 @@
 section.home
     div.home__left-content
-        img.img.__img(src='/./img/woman-wearing-white-dress-bending-down-2250276.jpg')
+        img.img.__img.image-dark-mode#img-bg-home(src='/./img/woman-wearing-white-dress-bending-down-2250276.jpg')
     div.home__right-content
-        div.header-title
+        div.header-title#header-title
             h1.main-title concept
             h1.main-title & luminosity
         h3.subtitle.home__subtitle Contemporary Art Seller
