--- a/public/views/_nav.pug
+++ b/public/views/_nav.pug
@@ -1,9 +1,9 @@
-nav.navbar
+nav.navbar#navbar
     div.navbar__theme-icon#switch-theme-btn
         img(src='/./img/svg/iconfinder_sun_226556.svg')
     ul.navbar__list
         li 
-            a(href='/home') Home
+            a.navbar-list-item(href='/home') Home
         li
             a(href='/home/gallery') Gallery
         li About
