--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -1,4 +1,4 @@
-$color-bg-grey: #EFEFEF;
+$color-bg-grey: #eeeeee;
 $color-grey-light:#B9B9B9;
 $color-grey-ultra-light:#cecece;
 $color-grey-dark: #4E4E4E;
