--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -8,5 +8,6 @@
 @import './layout/footer';
 @import './layout/product-grid';
 @import './components/buttons'; 
+@import './components/product'; 
 @import './themes/light-theme';
 @import './themes/dark-theme';
