--- a/public/sass/layout/_product-grid.scss
+++ b/public/sass/layout/_product-grid.scss
@@ -1,7 +1,7 @@
 .product-grid {
   width: 100%;
   min-height: 100vh;
-
+  background-color: var(--text-white-color);
   &-container {
     width: 90%;
     height: 100%;
@@ -14,6 +14,7 @@
 }
 
 .product {
+  position: relative;
   display: flex;
   flex-direction: column;
   height: 90vh;
@@ -27,8 +28,20 @@
   -webkit-box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.59);
   -moz-box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.59);
   box-shadow: 0px 0px 18px 0px rgba(50, 50, 50, 0.59);
-  transition: all .05s ease-in;
+  transition: all 0.05s ease-in;
   cursor: pointer;
+
+  &:hover {
+    &-info {
+      transform: scale(1.02);
+      filter: brightness(70%);
+      // backdrop-filter: blur(10px);
+      & .grid-view-btn {
+        opacity: 1;
+      }
+    }
+  }
+
   &-info {
     position: relative;
     width: 100%;
@@ -53,7 +66,7 @@
     }
   }
 
-  & a {
+  &-price {
     position: relative;
     top: 3%;
     z-index: 10;
@@ -74,9 +87,15 @@
     font-size: 1.8vw;
   }
 
-  &:hover{
-    transform: scale(1.02);
-    
-    
-  }
+ 
+}
+
+.grid-view-btn {
+  position: absolute;
+  width: 100%;
+  height:100%;
+  // background-color: rgb(119, 71, 71);
+  z-index: 10;
+  cursor: pointer;
+  // opacity: 0;
 }
