--- a/public/sass/components/_nav.scss
+++ b/public/sass/components/_nav.scss
@@ -11,11 +11,14 @@
   display: flex;
   align-items: center;
   z-index: 10;
+  
   &__theme-icon {
-    position: relative;
-    height: 130%;
-    width: 5%;
-    background-color: var(--nav-color-grey);
+    position: absolute;
+    // right: 100%;
+    height: 100%;
+    width: 6%;
+    z-index: 50;
+    background-color: #eeeeee;
     
     & img{
         height: 40%;
