Dark mode changes

--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 $color-bg-grey: #eeeeee;
 $color-grey-light:#B9B9B9;
 $color-grey-ultra-light:#cecece;
-$color-grey-dark: #4E4E4E;
+$color-grey-dark: #242424;
 $color-white-main: #FFFFFF;
 $color-black-lighter: #131313;
