--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -9,5 +9,6 @@
 @import './layout/product-grid';
 @import './components/buttons'; 
 @import './components/product'; 
+@import './components/lists'; 
 @import './themes/light-theme';
 @import './themes/dark-theme';
