--- a/public/views/_about.pug
+++ b/public/views/_about.pug
@@ -4,5 +4,5 @@ section.about
         h3.subtitle.about__subtitle Since 1917
         p.common-paragraph.about__paragraph Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore amet, iure id vitae consectetur beatae! Dolorem consectetur itaque totam quis temporibus aut corporis asperiores repellendus saepe exercitationem ullam ipsam porro explicabo sint esse, veritatis tempora. Possimus architecto, ducimus porro omnis odit tempora beatae consequatur id?
         h3.subtitle.about__subtitle More than 80 different artists and more than 250 unique pieces of art
-        a.btn-large.btn-action.about__action(href='#') shop
+        a.btn-large.btn-action.about__action(href='/home/gallery') shop
     div.about__right-content
