--- a/public/views/_artists.pug
+++ b/public/views/_artists.pug
@@ -1,4 +1,4 @@
-section.artists
+section.artists#artist
     div.artists-title
         h1.main-title.artists__title outstanding artists
     div.artists-content
