--- a/public/views/_footer.pug
+++ b/public/views/_footer.pug
@@ -1,8 +1,12 @@
 footer
     h5.main-title-small concept & luminosity
-        ul.navbar__list.footer-list
-            li Home
-            li Gallery
-            li About
-            li Artists
+    ul.footer-list.list
+        li 
+            a.list-item(href='/home') Home
+        li
+            a.list-item(href='/home/gallery') Gallery
+        li 
+            a.list-item(href='/home/gallery') About
+        li 
+            a.list-item(href='/home/gallery') Artists
     p Copyright &copy; 2020 Matías Nicoletti
