--- a/public/views/_home.pug
+++ b/public/views/_home.pug
@@ -7,5 +7,6 @@ section.home
             h1.main-title & luminosity
         h3.subtitle.home__subtitle Contemporary Art Seller
         h3.subtitle.home__phrase Art, like morality, consists of drawing the line somewhere
-
+        div.home__arrow
+          img(src='/./img/svg/arrow.svg')#home_arrow
 
