--- a/public/views/_nav.pug
+++ b/public/views/_nav.pug
@@ -1,11 +1,12 @@
 nav.navbar#navbar
     div.navbar__theme-icon#switch-theme-btn
-        img(src='/./img/svg/iconfinder_sun_226556.svg')
-    ul.navbar__list
+        img(src='/./img/svg/sun.svg')
+    ul.navbar__list.list
         li 
-            a.navbar-list-item(href='/home') Home
+            a.list-item(href='/home') Home
         li
-            a(href='/home/gallery') Gallery
-        li About
-        li Artists
-
+            a.list-item(href='/home/gallery') Gallery
+        li 
+            a.list-item(href='/home/gallery') About
+        li 
+            a.list-item(href='/home/gallery') Artists
