--- a/public/sass/components/_buttons.scss
+++ b/public/sass/components/_buttons.scss
@@ -5,6 +5,12 @@
     border-color:  var(--text-default-color-inuse); //all together not working
     text-transform: uppercase;
     background-color: transparent;
+    transition: all .35s ease-in;
+    cursor: pointer;
+    &:hover{
+        -webkit-box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.24); 
+box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.24);
+    }
 }
 
 .btn-medium{
