--- a/public/sass/layout/_artists.scss
+++ b/public/sass/layout/_artists.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   background-color: $color-grey-ultra-light;
+  
 }
 
 .artists-content {
@@ -16,13 +17,15 @@
   text-align: center;
   grid-column-gap: 4rem;
   margin-right: 2%;
+  
 }
 
 .artist-card {
     position: relative;
   width: 100%;
   height: 100%;
-  
+  transition: all .2s ease-in;
+  cursor: pointer;
   &__portrait {
     width: 100%;
     height: 80%;
@@ -38,10 +41,10 @@
     &-name{
         position: relative;
         z-index: 5;
-        top: 10%;      
+        top: 10%;  
     }
 
-    &:last-of-type{
+    &:last-child{
         color: $color-white-main;
     }
   }
@@ -56,6 +59,12 @@
       position: relative;
       top: 5vh;
     }
+    & p{
+      color: var(--text-default-color-inuse);
+    }
+  }
+  &:hover{
+    filter: brightness(105%);
   }
 }
 
