--- a/public/sass/layout/_product-grid.scss
+++ b/public/sass/layout/_product-grid.scss
@@ -1,15 +1,17 @@
 .product-grid {
   width: 100%;
-  min-height: 100vh;
-  background-color: var(--text-white-color);
+  // height: auto;
+  background-color: #eeeeee;
+  overflow-y: visible; 
   &-container {
     width: 90%;
-    height: 100%;
+    height: 100vh;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(25vw, 1fr));
     grid-column-gap: 5rem;
     grid-row-gap: 5rem;
+    
   }
 }
 
@@ -32,14 +34,8 @@
   cursor: pointer;
 
   &:hover {
-    &-info {
-      transform: scale(1.02);
-      filter: brightness(70%);
-      // backdrop-filter: blur(10px);
-      & .grid-view-btn {
-        opacity: 1;
-      }
-    }
+    transform: scale(1.02);
+    
   }
 
   &-info {
@@ -68,11 +64,11 @@
 
   &-price {
     position: relative;
-    top: 3%;
+    // top: 3%;
     z-index: 10;
-    width: 6vw;
+    width: 7vw;
     height: 8%;
-    font-size: 1.8vw;
+    font-size: 2rem;
     line-height: -20%;
     display: flex;
     align-items: center;
@@ -80,7 +76,7 @@
   }
 
   &-name {
-    font-size: 2.1vw;
+    font-size: 2vw;
   }
 
   &-artist {
